Update with EsLint

--- a/src/common/components/errorMessage/ErrorMessage.module.css
+++ b/src/common/components/errorMessage/ErrorMessage.module.css
@@ -3,13 +3,16 @@
     background-color: rgba(255, 131, 183, 0.75);
     color: white;
     font-weight: bold;
-    height: 45px;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .button {
+    height: 60px;
+    width: 60px;
     margin-left: 30px;
     color: #fb0066;
+    border: 0;
 }
