--- a/src/common/components/pagination/page/Page.module.css
+++ b/src/common/components/pagination/page/Page.module.css
@@ -1,10 +1,9 @@
 .selectedPage {
     font-weight: bold;
-    cursor: pointer;
-    margin: 5px;
 }
 
 .page {
     cursor: pointer;
     margin: 5px;
+    font-size: 18px;
 }
